fix video scaling on smaller devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,10 @@ header a, a:visited, a:hover, a:active {
 
 /* Newsletter */
 
+#intro-heading {
+    font-size: 40px;
+}
+
 #newsletter-signup {
     text-align: center;
     padding-bottom: 20px;
@@ -264,7 +268,6 @@ body {
     background-color:#F7F7FF;
     width: 70vw;
     border-radius: 15px;
-    border: 1px solid #000;
     align-self: center;
 }
 
@@ -278,8 +281,11 @@ body {
     width: 50%;
 }
 
-.updates-video-heading {
+
+.updates-article {
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .news-article {
@@ -287,7 +293,7 @@ body {
 }
 
 .news-paragraph {
-    padding: 4px 8px;
+    padding: 4px 8px 8px 8px;
     text-align: justify;
 }
 
@@ -296,7 +302,7 @@ body {
 }
 
 .video {
-    padding: 0;
+    padding: 0 0 10px 0;
     margin: 0;
     height: 250px;
 }
@@ -329,8 +335,6 @@ tr td:first-child {
 
 .group-list {
     list-style: none;
-    margin: auto;
-    padding: 10px;
 }
 
 .group-header {
@@ -358,6 +362,23 @@ tr td:first-child {
     }
 
 }
+
+@media screen and (max-width: 492px) {
+    .main-info {
+        width: fit-content;
+        display: flex;
+
+    }
+
+    .video {
+        height: fit-content;
+        width: 90vw;
+    }
+}
+
+@media screen and (max-width: 492px) {
+    
+}    
 
 @media screen and (max-width: 688px) {
     #menu {
